# Qiskit-Quantum-Espresso-Driver

./: .gitignore  LICENSE.txt  README.md  atoms.py  calc_matrix_elements.py  demo.py  demo_nospin.py  demo_spin.py  eri_hashmap.py  eri_pair_densities.py  eri_pair_densities_analysis.ipynb  eri_pair_densities_analysis_Mg.ipynb  hamiltonian.py  main.py  qiskit_index_ordering.py  requirements.txt  wfc.py  wfc_to_txt.py
cuda_eri/: README.md  eri_frozen_core_iijj.cu  eri_frozen_core_ijji.cu  eri_frozen_core_tiiu.cu  eri_frozen_core_tuii.cu  eri_sym.cu
eri/: c_ip.txt  cuda_output.txt  eri_sym_cu_0_4.txt  eri_sym_rs_tuvw_0_4_f64.txt  occ_binary.txt  p.txt  rust_output.txt
qe_files/: H2.scf.in  H2_spin.scf.in  Mg.scf.in  Mg.scf.out_paw
qe_files/Mg-Erik/: magnesium.xml  scf.vc-relax.in
qe_files/Mg-Erik/magnesium.save/: paw.txt
qe_files/out_H2/H2.save/: charge-density.hdf5  data-file-schema.xml  wfc1.hdf5  wfcdw1.hdf5  wfcup1.hdf5
qe_files/out_H2_old/: H2.xml
qe_files/out_H2_old/H2.save/: wfc1.hdf5
qe_files/out_H2_spin/: H2_spin.xml
qe_files/out_H2_spin/H2_spin.save/: charge-density.hdf5  wfcdw1.hdf5  wfcup1.hdf5
qe_files/out_Mg/: Mg.xml
qe_files/out_Mg_paw/: Mg.xml
qe_files/out_Mg_paw/Mg.save/: Mg.pbe-n-kjpaw_psl.0.3.0.UPF  paw.txt
qiskit_nature_qe/: calc_matrix_elements.py  eri_pair_densities.py  my_electronic_structure_problem.py  my_ground_state_eigensolver.py  qe_driver.py  wfc.py
rust_eri/: Cargo.toml  README.md
rust_eri/src/: main.rs
